Bug 265614 - Search field is overlapping with top history item
Summary: Search field is overlapping with top history item
Status: RESOLVED FIXED
Alias: None
Product: klipper
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Esben Mose Hansen
URL:
Keywords:
: 273020 276814 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-02-06 15:23 UTC by edwin
Modified: 2011-12-24 03:16 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.0
Sentry Crash Report:


Attachments
screenshot showing the problem (279.59 KB, image/png)
2011-02-06 15:25 UTC, edwin
Details

Note You need to log in before you can comment on or make changes to this bug.
Description edwin 2011-02-06 15:23:11 UTC
Version:           unspecified (using KDE 4.6.0) 
OS:                Linux

When have a clipboard history of 14 items or more, the search field will overlap with the top item. This happens to be the most important item, since its the active one.

I think this bug has been there for a long while, but i only realized it now since the new version has a  search field with a different color.

Reproducible: Always

Steps to Reproduce:
-Set history size to 100 or so.
-Copy 14+ items.
-Search on time and close the popup.
-Open the popup

Actual Results:  
The searchfield is over the top item.

Expected Results:  
The searchfield should not overlap with history items.
Comment 1 edwin 2011-02-06 15:25:05 UTC
Created attachment 56921 [details]
screenshot showing the problem
Comment 2 g111 2011-04-08 13:08:04 UTC
I confirm this bug for KDE 4.6.1 from debian/experimental-snapshots.
Comment 3 Burkhard Lück 2011-07-30 14:57:06 UTC
*** Bug 276814 has been marked as a duplicate of this bug. ***
Comment 4 Burkhard Lück 2011-07-31 17:56:23 UTC
Confirmed with Kubuntu 11.04 with Version v0.9.7 + KDE 4.7.00
Dito with master and 4.7 compiled from sources
Comment 5 Dmytro Fedonin 2011-10-12 09:03:44 UTC
For me it doesn't disappear as well. kdebase 4.6.3
Comment 6 Jekyll Wu 2011-11-07 01:26:42 UTC
*** Bug 273020 has been marked as a duplicate of this bug. ***
Comment 7 Jekyll Wu 2011-12-24 03:14:38 UTC
Git commit 4f98e2828ff0ece43f4fae1c9911c3ca2977e944 by Jekyll Wu.
Committed on 24/12/2011 at 03:50.
Pushed by jekyllwu into branch 'master'.

Make sure the search widget is really hidden when it should be.

It feels strange that m_filterWidget is still efftively visible
after m_filterWidgetAction is set as invisible. It might imply
other hidden problems. More investigation is needed.

BUG: 265614
FIXED-IN: 4.8.0

M  +2    -0    klipper/klipperpopup.cpp

http://commits.kde.org/kde-workspace/4f98e2828ff0ece43f4fae1c9911c3ca2977e944
Comment 8 Jekyll Wu 2011-12-24 03:16:09 UTC
Git commit 2f49ac7d2c099ad70152ecf88ae091518cdd492d by Jekyll Wu.
Committed on 24/12/2011 at 03:50.
Pushed by jekyllwu into branch 'KDE/4.8'.

Make sure the search widget is really hidden when it should be.

It feels strange that m_filterWidget is still efftively visible
after m_filterWidgetAction is set as invisible. It might imply
other hidden problems. More investigation is needed.

BUG: 265614
FIXED-IN: 4.8.0

M  +2    -0    klipper/klipperpopup.cpp

http://commits.kde.org/kde-workspace/2f49ac7d2c099ad70152ecf88ae091518cdd492d