Make sure the search widget is really hidden when it should be.

It feels strange that m_filterWidget is still efftively visible
after m_filterWidgetAction is set as invisible. It might imply
other hidden problems. More investigation is needed.

BUG: 265614
FIXED-IN: 4.8.0